--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "4.7.0",
     "@ionic-native/sqlite": "^4.7.0",
     "@ionic-native/status-bar": "4.7.0",
+    "@ionic-native/toast": "^4.7.0",
     "@ionic/pro": "1.0.20",
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
@@ -35,6 +36,7 @@
     "cordova-plugin-ionic-webview": "^1.2.0",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-toast": "^2.6.2",
     "cordova-sqlite-storage": "^2.3.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -55,7 +57,8 @@
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-datepicker": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-toast": {}
     },
     "platforms": [
       "android"
